@@ -128,6 +128,9 @@ Core and builtins
 Library
 -------
 
+- Have the encoding package's search function dynamically import using absolute
+  import semantics.
+
 - Patch #1647484: Renamed GzipFile's filename attribute to name.
 
 - Patch #1517891: Mode 'a' for ZipFile now creates the file if it
